crates/toml_edit/tests/fixtures/invalid/datetime-malformed-with-milli.stderr
TOML parse error at line 1, column 22
  |
1 | with-milli = 1987-07-5T17:45:00.12Z
  |                      ^
Invalid date-time
